--- a/index.html
+++ b/index.html
@@ -4,17 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="css/style.css" rel="stylesheet">
     <title>Formulário AlphaEdtech</title>
 </head>
 <body>
     <h1>Cadastro AlphaEdTech</h1>
         <form action="Url" method="post">
             <div>
-                <label for="name">Nome:</label>
+                <label for="name">Nome:</label><br>
                 <input type="text" id="name">
             </div>
             <div>
-                <label for="group">Turma:</label>
+                <label for="mail">E-mail</label><br>
+                <input type="email" id="mail">
+            </div>
+            <div>
+                <label for="password">Senha</label><br>
+                <input type="password" id="password">
+            </div>
+            <div>
+                <label for="niver">Data de Nascimento</label><br>
+                <input type="date" id="niver">
+            </div>
+            <div>
+                <label for="">Nivel de Satisfação</label><br>
+                <input type="range" list="tickmarks" >
+               
+            </div><br>
+            <div>
+                <label for="group">Turma:</label><br>
                 <select name="group" id="group">
                     <option value="turma1">ENIAC</option>
                     <option value="turma2">Lovelace</option>
@@ -29,7 +47,7 @@
                     <label for="no">Não</label>                
             </div>
             <div>
-                <label for="msg"> Considerações sobre a Alpha Edtech</label>
+                <label for="msg"> Considerações sobre a Alpha Edtech</label><br>
                 <textarea id="msg"></textarea>
             </div>
             <div>
