--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div>
             <div>
                 <label for="password">Senha</label><br>
-                <input type="password" id="password">
+                <input type="passwor" id="password">
             </div>
             <div>
                 <label for="niver">Data de Nascimento</label><br>
@@ -28,8 +28,7 @@
             </div>
             <div>
                 <label for="">Nivel de Satisfação</label><br>
-                <input type="range" list="tickmarks" >
-               
+                <input type="range" list="tickmarks" >               
             </div><br>
             <div>
                 <label for="group">Turma:</label><br>
