adding for/checkbox

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
                         <input type="checkbox" id="ia">
                         <label for="ia">Inteligência Artificial</label><br>
                         <input type="checkbox" id="blockchain">
-                        <label for="">BlockChain</label><br>
+                        <label for="blockchain">BlockChain</label><br>
                         <input type="checkbox" id="cybersecurity">
-                        <label for="">Cybersecurity</label><br>                    
+                        <label for="cybersecurity">Cybersecurity</label><br>                    
                 </div>
                 <div class="inputs">
                     <label for="msg"> Considerações sobre a Alpha Edtech:</label><br>
